# pokemon-icat

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  compile.sh  converter.py  default.nix  development.md  filename_to_name.csv  flake.nix  install.sh  name_to_generation.csv  nameslist.txt  pokemon-icat  pokemon-icat.sh  pokemon.py  pokemons.csv  pyproject.toml  random_pokemon.py  requirements.txt  result  result-2  setup_icons.py  types.txt
src/: args.rs  main.rs
